--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,8 +1,9 @@
 NAME = zombie
 
-SRCS = main.cpp\
-	   Zombie.cpp\
-	   zombieHorde.cpp\
+SRCS = 	main.cpp\
+		Weapon.cpp\
+		HumanA.cpp\
+		HumanB.cpp\
 
 OBJS = $(SRCS:.cpp=.o)
 
